fixed property editors vertical alignment

--- a/src/main.scss
+++ b/src/main.scss
@@ -20,10 +20,6 @@
     border-radius: 2px;
   }
 
-  .svd_property_editor_dropdown {
-    margin-bottom: 0.5em;
-  }
-
   .form-control:focus {
     border-color: $main-color;
     outline: 0;
