--- a/src/properties.scss
+++ b/src/properties.scss
@@ -40,6 +40,7 @@
           padding: 0;
           line-height: 3.25em;
           background-color: transparent;
+          vertical-align: middle;
           &:nth-child(1) {
             font-weight: 600;
           }
